# Python

./: README.md
chat-prompting/: .gitignore  Autonomy Contest.ipynb  ChatBot with Context.ipynb  ChatGPT-Promoting.ipynb  GPT 4 Promoting for Credit Card Cycle.ipynb  GPT 4 Promoting for NFT MarketPlace.ipynb  README.md  Serach for Model creation errors.ipynb  env.sample  requirements.txt
chat-prompting/.ipynb_checkpoints/: GPT 4 Promoting for Credit Card Cycle-checkpoint.ipynb  Prompt-Iterative & Summersing-checkpoint.ipynb
langchain-academy/: Readme.md
langchain-academy/module-0/: basics.py
langchain-academy/module-1/: 01_simple_graph.py  02_chain.py  03_router.py  04_Agent- ReAct.ipynb  05_AgentwithMemory.ipynb
langchain-academy/module-1/.ipynb_checkpoints/: 04_Agent- ReAct-checkpoint.ipynb
langchain-academy/module-1/studio/: 01_simple_graph.py  langgraph.json
langchain-academy/rag/: RagIntro.ipynb
langgraph-course-youtube/: README.md  env.sample  requirement.txt
langgraph-course-youtube/basic-reflection-agent/: basic.py  chains.py
langgraph-course-youtube/reflexion-agent/: chains.py  execute_tools.py  reflexion_graph.py  schema.py
mcp-client/: main.py  pyproject.toml
mcp-server-rss3/: README.md  env.sample  main.py  pyproject.toml
mcp-with-langgraph/: README.md  StdioMcpServer.py  main.py  mcpClientSSE.py  mcpServerSSE.py  pyproject.toml  stdioMcpClient.py
web3/: .gitignore  bonding_curve.py  erc20_handler.py  main.py  main_0ld.py
web3/abis/: erc20.json
