[project]
name = "mcp-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "mcp[cli]>=1.4.1",
]
